--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/qrcode": "^1.5.5",
+    "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
     "qrcode": "^1.5.3",
     "uuid": "^9.0.1"
